Finishing some unit tests. Fix SHL instruction. Working on display tests. Need to add logging for each op to follow along easier.

--- a/CHIP8Emulator/CHIP8Emulator.csproj
+++ b/CHIP8Emulator/CHIP8Emulator.csproj
@@ -78,7 +78,13 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="App.config" />
+    <None Include="test_display_0.ch8">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="test_opcode.ch8">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
