1. Fix clear 2. Make memory a new module to make setting ram for tests easier 3. A new test rom

--- a/CHIP8Emulator/CHIP8Emulator.csproj
+++ b/CHIP8Emulator/CHIP8Emulator.csproj
@@ -22,4 +22,9 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\CHIP8Core\CHIP8Core.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Update="BC_test.ch8">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 </Project>
