Fix bug with the timer going way too slow. Pong kinda works. Exception on wrap around. And the score doesn't go up

--- a/CHIP8Emulator/CHIP8Emulator.csproj
+++ b/CHIP8Emulator/CHIP8Emulator.csproj
@@ -26,5 +26,8 @@
 	  <None Update="BC_test.ch8">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+	  <None Update="pong.ch8">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 </Project>
